# SussySO

./: .gitignore  AUTHOR.md  DOCUMENTAZIONE.md  Makefile  README.md  TUTORIAL.md  config_machine.json  kernel  kernel.core.uriscv  kernel.stab.uriscv  term0.uriscv
headers/: const.h  listx.h  types.h
phase1/: msg.c  p1test.c  pcb.c
phase1/headers/: msg.h  pcb.h
phase2/: Makefile  exceptions.c  initial.c  interrupts.c  nucleus.c  output.txt  p2test.c  scheduler.c  ssi.c
phase2/headers/: exceptions.h  interrupts.h  nucleus.h  scheduler.h  ssi.h
phase2/src/: main.c
phase3/: p3test.c  sst.c  stdlib.c  sysSupport.c  vmManager.c  vmmenager.c
phase3/headers/: p3test.h  sst.h  sstexceptions.h  stdlib.h  sysSupport.h  vmManager.h  vmmenager.h
phase3/testers/: Makefile  fibEight.c  fibEleven.c  print.c  printerTest.c  terminalTest1.c  terminalTest2.c  terminalTest3.c  terminalTest4.c  todTest.c
phase3/testers/h/: tconst.h  types.h
specifiche/: RECAP.txt
src/: main.c  p2test.c
starterKitUriscv/: config_machine.json  launch.json
uriscv-gui/uriscv/: .gitignore  CMakeLists.txt  README.md  TUTORIAL.md
uriscv-gui/uriscv/app/: CMakeLists.txt  main.cc
uriscv-gui/uriscv/src/: CMakeLists.txt
uriscv-gui/uriscv/src/base/: json.cc  trackable_mixin.cc
uriscv-gui/uriscv/src/frontends/: CMakeLists.txt
uriscv-gui/uriscv/src/frontends/qriscv/: CMakeLists.txt  add_breakpoint_dialog.cc  add_suspect_dialog.cc  add_tracepoint_dialog.cc  address_line_edit.cc  application.cc  boolean_item_delegate.cc  code_view.cc  cpu_status_map.cc  create_machine_dialog.cc  debug_session.cc  device_tree_model.cc  device_tree_view.cc  error_hooks.cc  flat_push_button.cc  hex_view.cc  mac_id_edit.cc  machine_config_dialog.cc  machine_config_view.cc  main.cc  monitor_window.cc  processor_list_model.cc  processor_window.cc  register_item_delegate.cc  register_set_snapshot.cc  register_set_widget.cc  stop_mask_view.cc  stoppoint_list_model.cc  suspect_type_delegate.cc  symbol_table_model.cc  terminal_view.cc  terminal_window.cc  tlb_model.cc  trace_browser.cc  tree_view.cc  ui_utils.cc
uriscv-gui/uriscv/src/gdb/: gdb.cc  xgdb
uriscv-gui/uriscv/src/include/base/: basic_types.h  bit_tricks.h  json.h  lang.h  trackable_mixin.h
uriscv-gui/uriscv/src/include/gdb/: gdb.h
uriscv-gui/uriscv/src/include/qriscv/: add_breakpoint_dialog.h  add_suspect_dialog.h  add_tracepoint_dialog.h  address_line_edit.h  application.h  boolean_item_delegate.h  code_view.h  code_view_priv.h  cpu_status_map.h  create_machine_dialog.h  debug_session.h  device_tree_model.h  device_tree_view.h  flat_push_button.h  hex_view.h  hex_view_priv.h  mac_id_edit.h  machine_config_dialog.h  machine_config_dialog_priv.h  machine_config_view.h  memory_view_delegate.h  monitor_window.h  monitor_window_priv.h  processor_list_model.h  processor_window.h  register_item_delegate.h  register_set_snapshot.h  register_set_widget.h  stop_mask_view.h  stoppoint_list_model.h  suspect_type_delegate.h  symbol_table_model.h  terminal_view.h  terminal_window.h  terminal_window_priv.h  tlb_model.h  trace_browser.h  trace_browser_priv.h  tree_view.h  ui_utils.h
uriscv-gui/uriscv/src/include/support/liburiscv/: const.h  liburiscv.h  types.h
uriscv-gui/uriscv/src/include/uriscv/: accelerator.h  aout.h  arch.h  bios.h  bios_defs.h  blockdev.h  blockdev_params.h  config.h  const.h  core.h  cpu.h  csr.h  device.h  disassemble.h  error.h  event.h  machine.h  machine_config.h  memspace.h  mp_controller.h  mpic.h  processor.h  processor_defs.h  processor_riscv.h  regdef.h  stoppoint.h  symbol_table.h  systembus.h  time_stamp.h  types.h  utility.h  vde_network.h
uriscv-gui/uriscv/src/support/: CMakeLists.txt
uriscv-gui/uriscv/src/support/bios/: CMakeLists.txt  coreboot.S  exec.S  test.S
uriscv-gui/uriscv/src/support/crt/: CMakeLists.txt  crti.S  crtso.S
uriscv-gui/uriscv/src/support/ldscripts/: CMakeLists.txt  uriscvaout.ldscript  uriscvcore.ldscript
uriscv-gui/uriscv/src/support/liburiscv/: CMakeLists.txt  liburiscv.S
uriscv-gui/uriscv/src/uriscv/: CMakeLists.txt  blockdev.cc  config.cc  device.cc  disassemble.cc  elf2uriscv.cc  event.cc  machine.cc  machine_config.cc  memspace.cc  mkconfig.cc  mkdev.cc  mp_controller.cc  mpic.cc  objdump.cc  processor.cc  stoppoint.cc  symbol_table.cc  systembus.cc  testdis.cc  time_stamp.cc  utility.cc  vde_network.cc
